samples/_failures_safe/1761043650_d43f2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3922444a.c: In function ‘main’:
./samples/SAFE/__tmp_3922444a.c:150:17: error: expected declaration or statement at end of input
  150 |                 } else {
      |                 ^
./samples/SAFE/__tmp_3922444a.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3922444a.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3922444a.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3922444a.c:150:17: error: expected declaration or statement at end of input
